# static-box

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml
src/: lib.rs  tests.rs
