[package]
name = "static-box"
version = "0.2.0"
edition = "2018"

authors = ["alekseysidorov"]
license = "MIT OR Apache-2.0"

description = "A stack-allocated box that stores trait objects."
documentation = "https://docs.rs/static-box/"
repository = "https://github.com/alekseysidorov/static-box"
keywords = ["stack", "box", "trait-object", "data-structure", "no_std"]
categories = ["data-structures", "no-std"]

[dependencies]
